第一次提交代码，优化更新屏蔽部分功能

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"mobx-react": "^5.2.3",
 		"moment": "^2.22.2",
 		"react": "^16.5.2",
+		"react-devtools": "^3.6.1",
 		"react-dom": "^16.5.2",
 		"react-native": "^0.54.0",
 		"react-native-actionsheet": "^2.4.2",
@@ -26,6 +27,7 @@
 		"react-native-easy-loading": "^1.0.5",
 		"react-native-easy-toast": "^1.0.9",
 		"react-native-image-placeholder": "^1.0.14",
+		"react-native-iphone-x-helper": "1.2.0",
 		"react-native-loader": "^1.2.1",
 		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-progress": "^3.5.0",
@@ -38,8 +40,7 @@
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^1.5.1",
 		"react-redux": "^5.0.7",
-		"redux": "^4.0.1",
-		"react-native-iphone-x-helper": "1.2.0"
+		"redux": "^4.0.1"
 	},
 	"devDependencies": {
 		"babel-jest": "22.4.1",
